# GraPE

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config_coupled_multitask.yaml  config_coupled_singletask.yaml  config_hopt_gcgat_pdd.yaml  mkdocs.yaml  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_cpu.txt  requirements_dev.txt  requirements_gpu.txt  requirements_gpu_2.txt  setup.py
HyPE/: README.md  coupled_multitask.py  coupled_single_task_ensemble.py  decoupled-multitask.py  decoupled-multitask_grokking.py  decoupled_singletask_AGC.py  hym_workflow_icp_multitarget.py  hym_workflow_icp_single_coeff.py  hym_workflow_variable_num_coeffs.py  old_coupled_single_task_ensemble.py  optimization_run_cluster.py  transfer_learning_GroupGAT_datadriven.py
data/: solvation.csv
dgl_chem/: __init__.py
dglchem/: __init__.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: Makefile  dgl_chem.data.rst  dgl_chem.models.rst  dgl_chem.rst  dgl_chem.utils.rst  dgl_chem.visualizations.rst  mkdocs.yaml  modules.rst  requirements_dev.txt
grape/: __init__.py
notebooks/: BradleyDoubleGood.xlsx  DMPNN.py  DataTools.py  Demonstration.ipynb  E-DMPNN 1.py  FreeSolvTraining.py  GroupGAT_with_mask.py  Pipeline.ipynb  Walkthrough.ipynb  adv_21841594.err  adv_21841595.err  adv_21841595.out  afp_with_global_feats.py  alkanes_test.py  best_model.pt  best_model_dmpnn.pt  best_model_mpnn.pt  classification_arnaou.py  classyfire_plots.py  cluster_hyperparam_opt_coupled_ensemble.py  cluster_hyperparam_opt_coupled_multitask.py  config.yaml  (+54 more)
(+1468 files in other folders)
